# ScreamerCloud

./: .gitignore  .travis.yml  README.md  uml.drawio
client_console_app/: CMakeLists.txt  client_conf.json  main.cpp
client_console_app/inc/: client_app.h  client_network.h  file.h
client_console_app/src/: client_app.cpp  client_network.cpp  file.cpp
client_console_app/tests/: CMakeLists.txt
client_console_app/tests/inc/: client_network_mock.h
client_console_app/tests/src/: client_network_mock.cpp  tests.cpp
db_app/: CMakeLists.txt  main.cpp  postgres_install  test.json
db_app/inc/: database_manager.h  database_wrapper.h  files_database_manager.h  interfaces.h  logging.hpp  stubs_libpq.h  users_database_manager.h
db_app/src/: database_manager.cpp  database_wrapper.cpp  files_database_manager.cpp  users_database_manager.cpp
db_app/test/: CMakeLists.txt  main.cpp  test.cpp
network/: CMakeLists.txt
network/headers/: network_client.h  network_server.h
network/network_client/headers/: network_client.h
network/network_client/src/: network_client.cpp
network/network_server/headers/: network_server.h
network/network_server/src/: network_server.cpp
network/src/: network_client.cpp  network_server.cpp
network/tests/: CMakeLists.txt  test_client.cpp  test_server.cpp
network/tests/headers/: test.h  test_network_client.h  test_network_server.h
network/tests/src/: test.cpp  test_network_client.cpp  test_network_server.cpp
server/: CMakeLists.txt  config.json
server/include/: classes.h  commands.h  server.h  server_logging.hpp
server/source/: classes.cpp  commands.cpp  main.cpp  server.cpp
server/tests/: CMakeLists.txt  CMakeLists.txt.in
server/tests/include/: database_mock.h  network_mock.h  server_mock.h
server/tests/source/: tests.cpp
travis/: install-linux.sh
utills/: CMakeLists.txt  cmd_codes.h  error_codes.h  file.cpp  file.h  test.cpp
